--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <style>
         
     </style>
-    <title>Document</title>
+    <title>Oasis Electronic Calculator</title>
 </head>
 
 <body>
